deploy/azure/api-gateway/overlay/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /api-gateway
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
